--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
   --background-color-hero-footer: #2f303a;
   --background-color-body: #ffffff;
   --background-color-section: #f5f4fa;
+  --hero-button-color-hover: #188ce8;
 }
 
 html {
@@ -41,6 +42,8 @@ ol {
 
 img {
   display: block;
+  width: 100%;
+  height: auto;
 }
 
 .list {
@@ -66,8 +69,17 @@ img {
   line-height: 1.19;
 }
 
-.hidden {
-  display: none;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .container {
@@ -76,6 +88,10 @@ img {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
+}
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 /* //////////////шапка header/////////////////////////*/
 
@@ -162,20 +178,36 @@ img {
   text-transform: uppercase;
   color: var(--secondary-title-color);
 }
+.center {
+  text-align: center;
+}
 .hero-button {
   width: 200px;
-  height: 50px;
+  padding: 10px 32px;
+  align-items: center;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  text-align: center;
   letter-spacing: 0.06em;
   color: var(--secondary-title-color);
   background-color: var(--secondary-accent-color);
 }
 
+.hero-button:hover,
+.hero-button:focus {
+  background-color: var(--hero-button-color-hover);
+}
 /* //////////////Преимущества features/////////////////////////*/
 
+.features-list {
+  display: flex;
+}
+.features-item:not(:last-child) {
+  margin-right: 30px;
+}
 .features-item-title {
   font-weight: 700;
   line-height: 1.14;
