--- a/css/styles.css
+++ b/css/styles.css
@@ -188,6 +188,7 @@ img {
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  text-align: center;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -209,6 +210,7 @@ img {
   margin-right: 30px;
 }
 .features-item-title {
+  margin-bottom: 10px;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
