--- a/css/styles.css
+++ b/css/styles.css
@@ -261,7 +261,6 @@ img {
 .team-list {
   display: flex;
   margin-left: -30px;
-  margin-top: -30px;
 }
 
 .team-title {
@@ -275,7 +274,6 @@ img {
   flex-basis: calc(100% - 120px) / 4;
   text-align: center;
   margin-left: 30px;
-  margin-top: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -283,6 +281,7 @@ img {
 
 .member-name {
   padding: 30px 0px;
+  background-color: var(--background-color-body);
 }
 
 .team-member-title {
@@ -387,6 +386,7 @@ img {
   padding: 20px 24px;
 }
 .projects-link-title {
+  margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
